Fix displaying account expiration form (set minimum to "0", better handling of overflow); atom#184

--- a/src/main/resources/tigase/assets/css/custom.css
+++ b/src/main/resources/tigase/assets/css/custom.css
@@ -389,6 +389,13 @@ form-label {
 	font-weight: bolder;
 }
 
+.dashboard-form-label {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	width: 95%;
+}
+
 @media(min-width:768px) {
 	.sidebar {
 		width: 300px;
